--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
       background:var(--bg);
     }
 
-    h1,
-    h2{
+    h1,h2,h3,h4{
       font-family: "Arial Rounded MT Bold", "Arial Rounded Bold", "Arial Rounded", Arial, sans-serif;
     }
 
@@ -1615,6 +1614,7 @@
   font-size:22px;
   font-weight:800;
   margin-bottom:30px;
+  color:#374151;
 }
 
 .usecase-grid{
@@ -1647,7 +1647,7 @@
   padding-left:28px;
   margin-bottom:12px;
   font-size:15px;
-  color:#374151;
+  color:#6c7180;
 }
 
 .usecase-list.negative li::before{
@@ -1677,7 +1677,7 @@
   margin-top:40px;
   text-align:center;
   font-size:16px;
-  color:#374151;
+  color:#6c7180;
 }
 
 /* Responsive */
@@ -1892,7 +1892,7 @@
   </div>
 </section>
 
-<section class="activity-section">
+<section class="activity-section" style=" padding-bottom: 40px; ">
   <div class="container">
 
     <div class="activity-header">
@@ -1937,7 +1937,7 @@
   </div>
 </section>
 
-  <section class="usecases-section">
+  <section class="usecases-section" style=" padding-top: 0px; ">
   <div class="container">
 
     <!-- CASO 1 -->
@@ -2050,7 +2050,7 @@
     <div class="testimonials-header">
       <img src="mechas.svg" alt="" class="testimonials-icon">
       <h2>Témoignages</h2>
-      <p>Plus de 200 000 entreprises font confiance à Invoice Ninja</p>
+      <p>Ils nous font confiance</p>
     </div>
 
     <div class="testimonials-card">
@@ -2649,6 +2649,6 @@ animation.addEventListener('complete', () => {
     </div>
   </div>
 </footer>
-<script src="https://tomos.bot/embed.js" data-empresa="tomos" data-bot="app-facture-mu"></script>
+<script src="https://tomos.bot/embed.js?v=533209" data-empresa="tomos" data-bot="app-facture-mu"></script>
 </body>
 </html>
