--- a/tarifs.html
+++ b/tarifs.html
@@ -597,6 +597,7 @@
       font-weight: 800;
     }
 
+
     .feature-list--tight li::before{
       color: #22c55e;
     }
@@ -1011,7 +1012,7 @@
 
         <div class="price-grid">
           <article class="price-card">
-            <h3>Le Rempart – Essentials</h3>
+            <h3>START</h3>
             <p>Yes, it's really free 🙂</p>
             <div class="price-amount">
               <span data-monthly="0€" data-annual="0€">0€</span></br>
@@ -1023,20 +1024,18 @@
             <div class="divider"></div>
             <div class="feature-heading">FREE PLAN INCLUDES</div>
             <ul class="feature-list">
-              <li>Limit 5 Clients </li>
-              <li>Unlimited Invoicing & Quotations</li>
-              <li>Brand Invoices with Your Logo</li>
-              <li>Articles & Clients Management</li>
-              <li>Taxes per Line-item or Invoice Total</li>
-              <li>Accept Deposits & Partial Payments</li>
-              <li>Send Invoices by Email or Whatsapp</li>
-              <li>Payment management</li>
+              <li>1 utilisateur</li>
+              <li>Limité à 5 clients</li>
+              <li>Facturation sans limite</li>
+              <li>Votre logo sur les factures</li>
+              <li>Création de factures en PDF et envoi par email</li>
+              <li>Avec gestion de TVA</li>
 
             </ul>
           </article>
 
           <article class="price-card price-card--green">
-            <h3>Le Pieter – Pro</h3>
+            <h3>GROW</h3>
             <p>Pay annually for 10 months + 2 months free!</p>
             <div class="price-amount">
               <span data-monthly="9,9€" data-annual="99€">9,9€</span></br>
@@ -1048,19 +1047,18 @@
             <div class="divider"></div>
             <div class="feature-heading">ALL FREE FEATURES +</div>
             <ul class="feature-list feature-list--tight">
-              <li>All Le Pouce + :</li>
-              <li>Unlimited Clients</li>
-              <li>Hide “Created by Facture.mu”</li>
-              <li>Auto-Reminders</li>
-              <li>10 Professional Invoice Templates</li>
-              <li>Auto-Attached Invoice PDF to Emails</li>
+              <li>1 utilisateur</li>
+              <li>Clients & Facturation sans limite</li>
+              <li>Modèles de facture</li>
+              <li>Gestion et suivi de paiements</li>
+              <li>Export Excel</li>
               <li>Reports</li>
             
             </ul>
           </article>
 
           <article class="price-card price-card--blue">
-            <h3>Le Morne – Enterprise</h3>
+            <h3>SCALE</h3>
             <p>Pay annually for 10 months + 2 months free!</p>
             <div class="price-amount">
               <span data-monthly="19,9€" data-annual="199€">19,9€</span></br>
@@ -1072,12 +1070,15 @@
             <div class="divider"></div>
             <div class="feature-heading">ALL PRO FEATURES+</div>
             <ul class="feature-list">
-              <li>All Pieter Both + :</li>
-              <li>Multi-users (up to 50!) </li>
-              <li>Permissions per User</li>
-              <li>Attach Files to Emails</li>
-              <li>(pdf, jpg, ppt, xls, docs & more)</li>
-              <li>API Access</li>
+              <li>3 utilisateurs</li>
+              <li>Factures récurrentes</li>
+              <li>Relances automatiques</li>
+            <p>À venir :</p>
+              <li>Gestion de stock</li>
+              <li>E-invoicing</li>
+              <li>API access</li>
+              <li>Multi-currency</li>
+
             </ul>
           </article>
 
