--- a/tarifs.html
+++ b/tarifs.html
@@ -1038,7 +1038,7 @@
             <h3>GROW</h3>
             <p>Pay annually for 10 months + 2 months free!</p>
             <div class="price-amount">
-              <span data-monthly="9,9€" data-annual="99€">9,9€</span></br>
+              <span data-monthly="Rs 499 (9,9€)" data-annual="Rs 4990 (99€)">Rs 499 (9,9€)</span></br>
               <span class="price-term" data-monthly="Per month" data-annual="per year with an annual plan!">per year with an annual plan!</span>
             </div>
             <div class="price-action">
@@ -1061,7 +1061,7 @@
             <h3>SCALE</h3>
             <p>Pay annually for 10 months + 2 months free!</p>
             <div class="price-amount">
-              <span data-monthly="19,9€" data-annual="199€">19,9€</span></br>
+              <span data-monthly="Rs 999 (19,9€)" data-annual="Rs 9990 (199€)">Rs 999 (19,9€)</span></br>
               <span class="price-term" data-monthly="Per month" data-annual="Per year">Per year</span>
             </div>
             <div class="price-action">
