--- a/tarifs.html
+++ b/tarifs.html
@@ -1037,7 +1037,7 @@
             <p>Yes, it's really free 🙂</p>
             <div class="price-amount">
               <div class="price-line">
-                <span class="price-main" data-monthly="0€" data-annual="0€">0€</span>
+                <span class="price-main" data-monthly="Rs 0" data-annual="Rs 0">Rs 0</span>
                 <span class="price-term" data-monthly="Per month" data-annual="Per year">Per year</span>
               </div>
             </div>
