Update homepage copy

--- a/index.html
+++ b/index.html
@@ -1774,13 +1774,12 @@
 
     <div class="hero-content">
       <h1>
-        Facturation simplifiée pour les<br>
-        entreprises qui grandissent à Maurice
+        La facturation simple et intelligente qui accompagne la croissance des<br>
+        entreprises mauriciennes.
       </h1>
 
       <p>
-        Créez, envoyez et suivez vos factures en quelques clics. <br/>Professionnel, multilingue,
-        multi-devises.
+        Passez moins de temps à facturer et plus de temps à développer votre activité grâce à une facturation professionnelle, multilingue et<br/>multi-devises.
       </p>
 
 
@@ -1817,7 +1816,7 @@
   <img src="Icon awesome-star.svg" alt="star">
 </div>
 
-        <small style=" margin-top: 30px; ">95% des utilisateurs disent « plus rapide qu’Excel! »</small>
+        <small style=" margin-top: 30px; ">« plus facile et rapide qu’Excel ! »</small>
       </div>
     </div>
   </section>
@@ -1878,7 +1877,7 @@
       <img src="mechas.svg" alt="" class="activity-icon">
       <h2>Fonctionnalités</h2>
       <p>
-        Une plateforme moderne pensée pour l’écosystème business mauricien et international
+        Une plateforme moderne avec les fonctionnalités clés pour gérer la facturation locale et internationale.
       </p>
     </div>
 
@@ -1913,7 +1912,7 @@
       <img src="mechas.svg" alt="" class="activity-icon">
       <h2>Pour votre activité</h2>
       <p>
-        Une plateforme moderne pensée pour l’écosystème business mauricien et international
+        Une plateforme pensée pour les entreprises, cabinets et indépendants opérant à Maurice et à l’international.
       </p>
     </div>
 
@@ -1922,18 +1921,15 @@
       <!-- TEXTO -->
       <div class="activity-content">
         <h3>
-          Freelances, consultants, indépendants,<br>
-          petites entreprises : logiciel de<br>
-          facturation gratuit
+          Le logiciel de facturation gratuit conçu pour les freelances,<br>
+          consultants, indépendants et<br>
+          petites entreprises.
         </h3>
 
         <p>
-          Facturation pour freelances et petites entreprises.<br><br>
+          Facturation pour freelances et entreprises de toutes tailles.<br><br>
 
-          Impressionnez vos clients avec des factures au design professionnel,
-          en accord avec votre marque. Acceptez les paiements par carte bancaire
-          ou virement, et envoyez des rappels automatiques amicaux en cas de retard
-          de paiement.
+          Projetez une image professionnelle avec des factures au design soigné et alignées à votre marque. Gagnez du temps grâce à l’envoi automatique, au suivi des paiements et aux rappels amicaux en cas de retard.
         </p>
 
         <button class="activity-cta" type="button" data-register-cta>
@@ -2064,7 +2060,7 @@
     <div class="testimonials-header">
       <img src="mechas.svg" alt="" class="testimonials-icon">
       <h2>Témoignages</h2>
-      <p>Ils nous font confiance</p>
+      <p>Une solution de facturation de confiance pour les entreprises et les indépendants.</p>
     </div>
 
     <div class="testimonials-card">
@@ -2083,9 +2079,7 @@
 
 
         <p class="testimonial-text">
-          Facture.mu est un outil de facturation et de gestion des dépenses robuste,
-          flexible et étonnamment abordable que plus de 200 000 propriétaires uniques
-          et propriétaires de petites entreprises utilisent chaque jour…
+          Facture.mu a transformé notre manière de gérer le club. Tout est plus clair, plus organisé, et nous passons beaucoup moins de temps sur l’administratif. Signature : Stéphanie
         </p>
 
         <div class="testimonial-site">cavalia.mu</div>
@@ -2105,9 +2099,7 @@
 
 
         <p class="testimonial-text">
-          Facture.mu est en passe de devenir l’un des grands noms du monde de la
-          facturation à Maurice ! Une excellente option pour les propriétaires
-          de petites entreprises et les associations comme la nôtre !
+          Grâce à Facture.mu, nous passons beaucoup moins de temps sur l’administratif et bien plus de temps à aider les animaux. La gestion est plus claire, plus organisée et beaucoup plus sereine. Signature : Audrey
         </p>
 
         <div class="testimonial-site">nouzanimo.mu</div>
@@ -2127,8 +2119,7 @@
 
 
         <p class="testimonial-text">
-          Le meilleur logiciel de facturation gratuit est non seulement facile pour
-          le compte bancaire, mais aussi convivial et doté de nombreuses fonctionnalités !
+          Grâce à Facture.mu, La Vanilleraie Vanillart peut désormais gérer des ventes en plusieurs devises en toute simplicité. La facturation est claire, structurée, et nous permet de nous concentrer pleinement sur notre cœur de métier : la vanille. Signature : Dhareena
         </p>
 
         <div class="testimonial-site">vanillart.mu</div>
