--- a/index.html
+++ b/index.html
@@ -1921,9 +1921,7 @@
       <!-- TEXTO -->
       <div class="activity-content">
         <h3>
-          Le logiciel de facturation gratuit conçu pour les freelances,<br>
-          consultants, indépendants et<br>
-          petites entreprises.
+          Le logiciel de facturation gratuit conçu pour les freelances, consultants, indépendants et petites entreprises.
         </h3>
 
         <p>
