--- a/index.html
+++ b/index.html
@@ -1779,7 +1779,7 @@
       </h1>
 
       <p>
-        Passez moins de temps à facturer et plus de temps à développer votre activité grâce à une facturation professionnelle, multilingue et<br/>multi-devises.
+        Passez moins de temps à facturer et plus de temps à développer votre activité grâce à une facturation professionnelle, multilingue et multi-devises.
       </p>
 
 
