--- a/tarifs.html
+++ b/tarifs.html
@@ -1117,14 +1117,14 @@
 
         </div>
 
-        <div class="comparison-toggle comparison-hidden">
+        <div class="comparison-toggle ">
           <button class="comparison-btn" type="button" aria-expanded="false" aria-controls="comparison-table">
             Plans &amp; Feature Comparison
             <span class="comparison-icon" aria-hidden="true">⌃</span>
           </button>
         </div>
 
-        <div class="comparison-table is-collapsed comparison-hidden" id="comparison-table">
+        <div class="comparison-table is-collapsed " id="comparison-table">
           <table class="comparison-grid">
             <thead>
               <tr>
