--- a/tarifs.html
+++ b/tarifs.html
@@ -667,7 +667,7 @@
       flex-direction: column;
       gap: 10px;
       color: #6b7280;
-      font-size: 11px;
+      font-size: 14px;
       line-height: 1.4;
     }
 
@@ -1110,7 +1110,7 @@
                 <span class="pricing-card__term" data-monthly="Per month" data-annual="Per year">Per year</span>
               </div>
               <div class="pricing-card__line">
-                <span class="pricing-card__equivalent" data-monthly="Yes, it's really free 🙂" data-annual="Yes, it's really free 🙂">Yes, it's really free 🙂</span>
+                <span class="pricing-card__equivalent" data-monthly="Oui, gratuit" data-annual="Oui, gratuit">Oui, gratuit</span>
               </div>
             </div>
             <div class="price-action">
@@ -1143,7 +1143,6 @@
                 <span class="pricing-card__equivalent" data-monthly="(9,9€ / month)" data-annual="(99€ / year)">(9,9€ / month)</span>
               </div>
             </div>
-            <p class="pricing-card__subtitle">Pay annually for 10 months + 2 months free!</p>
             <div class="price-action">
               <button class="signup-btn signup-btn--green" type="button" data-register-cta>Sign up</button>
             </div>
@@ -1174,7 +1173,6 @@
                 <span class="pricing-card__equivalent" data-monthly="(19,9€ / month)" data-annual="(199€ / year)">(19,9€ / month)</span>
               </div>
             </div>
-            <p class="pricing-card__subtitle">Pay annually for 10 months + 2 months free!</p>
             <div class="price-action">
               <button class="signup-btn signup-btn--filled" type="button" data-register-cta>Sign up</button>
             </div>
