--- a/index.html
+++ b/index.html
@@ -1762,7 +1762,7 @@
         </div>
 
         <a class="link-btn" href="https://app.facture.mu/login" target="_blank" rel="noopener noreferrer">Se connecter</a>
-        <a class="btn" href="https://app.facture.mu/register" target="_blank" rel="noopener noreferrer">Créer un compte</a>
+        <button class="cta" type="button" data-register-cta>Essai 15j gratuits</button>
       </div>
     </div>
   </div>
