--- a/donnees-personnelles.html
+++ b/donnees-personnelles.html
@@ -1664,7 +1664,7 @@
         </div>
 
         <a class="link-btn" href="https://app.facture.mu/login" target="_blank" rel="noopener noreferrer">Se connecter</a>
-        <a class="btn" href="https://app.facture.mu/register" target="_blank" rel="noopener noreferrer">Créer un compte</a>
+        <button class="cta" type="button" data-register-cta>Essai 15j gratuits</button>
       </div>
     </div>
   </div>
@@ -1766,6 +1766,13 @@
       const isOpen = header.classList.toggle('open');
       menuToggle.classList.toggle('is-active', isOpen);
       menuToggle.setAttribute('aria-expanded', String(isOpen));
+    });
+
+    const registerButtons = document.querySelectorAll('[data-register-cta]');
+    registerButtons.forEach(btn => {
+      btn.addEventListener('click', () => {
+        window.open('https://app.facture.mu/register', '_blank', 'noopener,noreferrer');
+      });
     });
   });
 </script>
