--- a/tarifs.html
+++ b/tarifs.html
@@ -1106,8 +1106,7 @@
             <h3>START<span class="pricing-card__tag"></span></h3>
             <div class="pricing-card__price">
               <div class="pricing-card__line">
-                <span class="pricing-card__amount" data-monthly="Rs 0" data-annual="Rs 0">Rs 0</span>
-                <span class="pricing-card__term" data-monthly="Per month" data-annual="Per year">Per year</span>
+                <span class="pricing-card__amount" data-monthly="Gratuit" data-annual="Gratuit">Gratuit</span>
               </div>
               <div class="pricing-card__line">
                 <span class="pricing-card__equivalent" data-monthly="Oui, gratuit" data-annual="Oui, gratuit">Oui, gratuit</span>
