--- a/tarifs.html
+++ b/tarifs.html
@@ -667,7 +667,7 @@
       flex-direction: column;
       gap: 10px;
       color: #6b7280;
-      font-size: 14px;
+      font-size: 16px;
       line-height: 1.4;
     }
 
@@ -1032,6 +1032,23 @@
       .footer-links{gap:30px;}
       .footer-bottom-inner{flex-direction:column;}
     }
+    
+       .cta{
+      background: var(--green);
+      color:#fff;
+      border: 0;
+      padding: 14px 26px;
+      border-radius: 999px;
+      font-weight: 800;
+      font-size: 14px;
+      cursor:pointer;
+      box-shadow: 0 10px 20px rgba(0,0,0,.12);
+      transition: background .2s ease, transform .2s ease;
+    }
+    .cta:hover{background: rgba(27,118,77,.7)}
+    .cta:active{transform:translateY(1px)}
+
+    
   </style>
 </head>
 <body>
@@ -1413,7 +1430,7 @@
 
     <div class="footer-bottom">
       <div class="container footer-bottom-inner">
-        <span>© Facture.mu - Tous droits réservés.</span>
+        <span>© Facture.mu - Tous droits réservés. @2026</span>
         <span>Mentions légales &nbsp;-&nbsp; CGV &nbsp;-&nbsp; Cookies</span>
       </div>
     </div>
